<resources>
    <string name="app_name">Second Week Sign Up</string>
    <string name="welcome_to_bauuss">Welcome to \n Bauuss</string>
    <string name="email_adress">Email Adress</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>