<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="109dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#7364FF"
        android:textSize="42sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="348dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="#E8E7FF"
        app:layout_constraintTop_toBottomOf="@+id/signUp"
        tools:layout_editor_absoluteX="31dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/usernameContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/signUp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:background="@drawable/background_edittext_radius_with_10_dp"
            android:inputType="textPersonName"
            android:autofillHints="username"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailAdressContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/usernameContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_adress"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/emailAdress"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:background="@drawable/background_edittext_radius_with_10_dp"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="14dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAdressContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="15sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:autofillHints="password"
                android:background="@drawable/background_edittext_radius_with_10_dp"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/ivshowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="11dp"
                android:src="@drawable/ic_baseline_visibility_off_24"
                app:tint="#B4B4B4"
                android:contentDescription="@string/password" />
        </FrameLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/background_button"
            android:elevation="5dp"
            android:text="@string/register"
            android:backgroundTint="#7364FF"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordContainer" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="491dp"
        android:contentDescription="@string/register"
        android:src="@drawable/cityscapes_town"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>